# detestableme-rust

./: Cargo.toml
src/: cipher.rs  gadget.rs  henchman.rs  lib.rs  main.rs  sidekick.rs  supervillain.rs  test_common.rs
